courses scrolly thingy

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,6 +1,7 @@
 @import 'setup';
 @import 'global';
 @import 'utils';
+@import 'sliderThing';
 @import 'sideNav';
 @import 'header';
 @import 'ticker';
