--- a/styles/sass/_mainSections.scss
+++ b/styles/sass/_mainSections.scss
@@ -34,7 +34,13 @@ section.courses {
     }
 }
 
-section.services {
+section.courses {
+    height: auto;
+}
+
+section.services,
+section.latestBlog,
+section.process {
     background-color: $secondary;
 }
 
@@ -74,18 +80,25 @@ section.services {
 }
 
 .serviceText {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
     margin-top: 40px;
+    justify-content: space-between;
     & h4 {
         font-size: 2.5rem;
         font-weight: 200;
         margin-bottom: 30px;
     }
     & p {
-        margin-bottom: 30px;
         width: 90%;
     }
 }
 
+.modal-md {
+    max-width: 800px;
+    margin: 30vh auto;
+}
 
 .clientsWidget {
     position: relative;
