Website media dump 1

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -7,9 +7,10 @@ header {
 .heading {
     order: 1;
     &Main {
-        background: url(../assets/5DEDE4B4-ECF8-48E7-A2B5-7F65367B3830.jpeg);
+        background: url(../assets/CB-Strong.jpg);
         background-repeat: no-repeat;
         position: relative;
+        background-size: cover;
     }
 }
 
